Add project file heading

--- a/gdp_population_africa.ipynb
+++ b/gdp_population_africa.ipynb
@@ -1,12 +1,12 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "561dc696-083e-486a-bf92-6208bd7b7586",
+   "cell_type": "markdown",
+   "id": "2181b96f-e7be-4717-9651-7ab810c33e2e",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Population and GDP Analysis of Africa"
+   ]
   }
  ],
  "metadata": {
