Add project subheading

--- a/gdp_population_africa.ipynb
+++ b/gdp_population_africa.ipynb
@@ -7,6 +7,14 @@
    "source": [
     "# Population and GDP Analysis of Africa"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "be930511-9402-433c-b099-c54cb649a1ae",
+   "metadata": {},
+   "source": [
+    "## Introduction"
+   ]
   }
  ],
  "metadata": {
